I introduced a few more colors to design also changed that yellow-gold color for few shades not too much, but enough to allow me to make overall design more modern, alive and pleasant for eyes, also finished rating component, user dropdown and fixed bug with conversation component

--- a/FreeMarketOne.UI/react-redux-ui/src/components/atoms/UI/Ui.css
+++ b/FreeMarketOne.UI/react-redux-ui/src/components/atoms/UI/Ui.css
@@ -36,12 +36,19 @@
   margin: 1em 0.5em;
   height: 0.07em;
   line-height: 0.07em;
-  background: #fca611;
+  background: #FFD700;
   color: #e8eef1;
 }
 .gradient:before {
-  background: linear-gradient(to right, #0b0e11, #fca611);
+  background: linear-gradient(to right, #0b0e11, #FFD700);
 }
 .gradient:after {
-  background: linear-gradient(to left, #0b0e11, #fca611);
+  background: linear-gradient(to left, #0b0e11, #FFD700);
+}
+.rating-star i {
+  font-size: 16px;
+  vertical-align: middle;
+color: #FFD700;
+padding: 0px;
+margin-left: 3px;
 }
