--- a/FreeMarketOne.UI/react-redux-ui/src/components/atoms/inputs/Input.css
+++ b/FreeMarketOne.UI/react-redux-ui/src/components/atoms/inputs/Input.css
@@ -42,17 +42,13 @@
   font-size: 17px;
 }
 .search-btn:hover {
-  color: #fca611;
-}
-
-.search-content.active .search-btn{
-  color: #fca611;
+  color: #0ebeff;
 }
 
 .search-content {
   background: #0e1013;
   top: 34px;
-  right: 180px;
+  right: 178px;
   height: 0px;
   transition: 0.3s;
   overflow: hidden;
@@ -61,7 +57,7 @@
 }
 .search-content.active {
   height: 45px;
-  border-top: 1px solid #fca611;
+  border-top: 1px solid #0ebeff;
   
 }
 
@@ -103,13 +99,13 @@
 .select > .selection:hover .chevron,
 .select > .selection:focus .chevron,
 .select > .selection:active .chevron {
-  color: #fca611;
+  color: #FFD700;
 }
 .options {
   user-select: none;
   position: absolute;
   margin-top: 26px;
-  border-top: 1px solid #fca611;
+  border-top: 1px solid #FFD700;
   background: #242a31;
   border-radius: 0px;
   padding: 0;
@@ -136,20 +132,20 @@
   color: #e8eef1;
 }
 .options > .option:hover {
-  background: #393f45;
+  background: #0e1013;
   color: #fff;
 }
 
 .label:hover {
-  color: #fca611;
+  color: #FFD700;
 }
 
 .label.open {
-  color: #fca611;
+  color: #FFD700;
 }
 
 .chevron.open {
-  color: #fca611;
+  color: #FFD700;
 }
 
 /* Header dropdowns style  -------> */
@@ -172,8 +168,15 @@
   max-width: auto !important;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  border-top: 1px solid #fca611;
+ border-top: 1px solid #47cf73;
+
 }
+.dropdown-content.usr{
+
+ border-top: 1px solid #ae63e4;
+
+}
+
 
 .dropdown-message {
   color: #e8eef1;
@@ -184,12 +187,12 @@
 }
 
 .dropdown-message:hover {
-  background: #393f45;
+  background: #1c2127;
   color: #fff;
 }
 
 .user-status {
-  border-bottom: 1px solid #4b535a;
+  border-bottom: 1px solid #393f45;
   /* background: #393f45; */
   padding: 8px;
   color: #999999;
@@ -209,11 +212,11 @@
   display: block;
 }
 .dropdown.open .user-notifications {
-  color: #fca611;
+  color: #47cf73;
 }
 
 .dropdown.open .user-login {
-  color: #fca611;
+  color: #ae63e4;
 }
 
 .time-tag {
@@ -225,39 +228,48 @@
 .dropdown-menu-header {
   padding: 8px 10px 6px 10px;
   font-size: 10px;
-  border-bottom: 1px solid #393f45;
-  color: #afb1be;
+ 
+  border-bottom: 1px solid #4b535a;
+  color: #E1E4E4;
   text-transform: uppercase;
   display: inline-block;
   display: flex;
   justify-content: space-between;
-  background: #0e1013;
+ /*  background: #0e1013; */
+  background: #242a31;
 }
 .dropdown-menu-header span {
   padding: 3px 0px;
+ 
 }
 .dropdown-menu-header i {
   font-size: 16px;
   vertical-align: middle;
+
+padding: 0px;
+
 }
+
 
 .section {
-  padding: 5px 15px;
+  padding: 8px 15px;
   font-size: 14px;
-}
-.section span {
-  padding: 0px 10px;
+  border-bottom: 1px solid #393f45;
 }
 
-.section span:hover {
-  background: #393f45;
+.section:hover {
+  background: #1c2127;
   cursor: pointer;
+
 }
 .section i {
   color: #999999;
-  font-size: 18px;
-  margin-right: 5px;
+  font-size: 16px;
+  margin-right: 8px;
   vertical-align: middle;
+}
+.section span {
+  color: #999999;
 }
 
 .no-messages {
@@ -272,3 +284,4 @@
   font-size: 0.8em;
   color: #4f545a;
 }
+
